--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -253,4 +253,7 @@ https://designspartan.com/ressources/15-timelines-verticales-en-html-css-a-telec
         min-width: 150px;
         font-size: 90px;
     } 
+    infoPerso{
+        min-width: 90%
+    }
 }
