Ajustement de la position pour l'entreprise

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -152,6 +152,10 @@ a{
 .installationPoste{
     max-width: 80%;
 }
+.Entreprise{
+    max-height: 80%;
+    max-width: 80%;
+}
 /*Le code de la frise est inspiré de : 
 https://designspartan.com/ressources/15-timelines-verticales-en-html-css-a-telecharger-gratuitement/*/
 .container{
