--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -2,7 +2,8 @@ body{
     display: flex;
     flex-direction: column;
     color: white;
-    background: linear-gradient(to bottom,rgba(5, 131, 235, 0.5), rgba(0, 0, 63, 0.5))
+    background: linear-gradient(to bottom,rgba(5, 131, 235, 0.5), rgba(0, 0, 63, 0.5));
+    background-size: cover;
 }
 /*gestion du titre */
 .title {
