--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     color: white;
     background: linear-gradient(to bottom,rgba(5, 131, 235, 0.5), rgba(0, 0, 63, 0.5));
-    background-size: cover;
+    background-attachment: fixed;
 }
 /*gestion du titre */
 .title {
