background en erson mobile

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -250,7 +250,7 @@ https://designspartan.com/ressources/15-timelines-verticales-en-html-css-a-telec
     body{
         align-items: center;
         font-size: 25px;
-        background-size: cover;
+        background-attachment: fixed;
     }
     .realisation{
     max-width: 90%;
